--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="assets/images/lemsfav.png" type="image/x-icon">
 
-    <title>Lems Tech</title>
+    <title>Lems Technologies | Your Technology Partner</title>
     <meta data-n-head="ssr" charset="utf-8">
     <meta data-n-head="ssr" name="viewport" content="width=device-width,initial-scale=1">
     <meta data-n-head="ssr" data-hid="keywords" name="keywords" content="tech, technology companies in nigeria, software companies in port harcourt">
